--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 // mainnet pool contract
-REACT_APP_MAINNET_POOL_CONTRACT_ADDRESS = 0x429a4db00cc5ceb21ce0f773be20dad3f716228a;
+REACT_APP_MAINNET_POOL_CONTRACT_ADDRESS = 0x429a4db00cc5ceb21ce0f773be20dad3f716228a
 // mainnet arowana token contract
-REACT_APP_MAINNET_AROWANA_CONTRACT_ADDRESS = 0x351caa9045d65107b9d311d922d15887cfd634e4;
+REACT_APP_MAINNET_AROWANA_CONTRACT_ADDRESS = 0x351caa9045d65107b9d311d922d15887cfd634e4
 
 // api base url
-REACT_APP_API_URL = 'http://3.38.183.154/';
+REACT_APP_API_URL = 'http://3.38.183.154/'
